<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorwhite"
    tools:context=".buttomnavigation.fragments.AccountFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="181dp"
        android:background="@drawable/header"
        android:backgroundTint="@color/colorblue"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="25dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:text="@string/data_kolam"
            android:textColor="@color/black"
            android:textSize="32dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="105dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="230dp"
        android:background="@drawable/shape_rectangle_colorarmy">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/jenis_ikan"
            android:textColor="@color/colorwhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/mujair"
            android:textColor="@color/colorwhite"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="105dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="380dp"
        android:background="@drawable/shape_rectangle_colorarmy">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/suhu_normal"
            android:textColor="@color/colorwhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/nol"
            android:textColor="@color/colorwhite"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="105dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="530dp"
        android:background="@drawable/shape_rectangle_colorarmy">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/ph_normal"
            android:textColor="@color/colorwhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/nol"
            android:textColor="@color/colorwhite"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>
</FrameLayout>