<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorblue"
    tools:context="onboarding.OnBoardingOneActivity">

    <Button
        android:id="@+id/btn_skip_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/shape_rectangle_colorgrey"
        android:text="@string/skip"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorgrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_next_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_rectangle_colorarmy"
        android:elevation="30dp"
        android:text="@string/lanjut"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorarmy"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_skip_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="87dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/suhu" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="110dp"
        android:text="@string/suhu_air"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="67dp"
        android:gravity="center"
        android:text="@string/suhu_air_desc"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>