<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:backgroundTint="@color/colorblue"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingVertical="25dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:text="@string/smart_farm"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/background"
        android:backgroundTint="@color/colorwhite"
        android:elevation="30dp"
        android:orientation="vertical"
        android:paddingVertical="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="117dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:id="@+id/btn_suhu"
                android:layout_width="330dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_rectangle_colorarmy">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:text="@string/suhu_air"
                    android:textColor="@color/colorwhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="280dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/suhu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="55dp"
                    android:text="@string/suhu_desc"
                    android:textColor="@color/colorwhite"
                    android:textSize="15sp" />


            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:id="@+id/btn_ph"
                android:layout_width="330dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_rectangle_colorarmy">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:text="@string/kadar_ph_air"
                    android:textColor="@color/colorwhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ph" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="55dp"
                    android:text="@string/kadar_desc"
                    android:textColor="@color/colorwhite"
                    android:textSize="15sp" />


            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:id="@+id/btn_keruh"
                android:layout_width="330dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_rectangle_colorarmy">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:text="@string/kekeruhan_air"
                    android:textColor="@color/colorwhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="280dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/water" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="55dp"
                    android:text="@string/kekeruhan_desc"
                    android:textColor="@color/colorwhite"
                    android:textSize="15sp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:id="@+id/btn_jumlah"
                android:layout_width="330dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_rectangle_colorarmy">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:text="@string/jumlah_ikan"
                    android:textColor="@color/colorwhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ikan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="55dp"
                    android:text="@string/jumlah_desc"
                    android:textColor="@color/colorwhite"
                    android:textSize="15sp" />


            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>